syntax = "proto3";

option java_multiple_files = true;
option java_package = "hello.wondsn.tutorial";
option java_outer_classname = "FileUploadProto";

service FileService {
  rpc uploadFile (stream FileUploadRequest) returns (FileUploadResponse);
}

message MetaData {
  string name = 1;
  string type = 2;
}

message File {
  bytes content = 1;
  int32 size = 2;
}

enum Status {
  PENDING = 0;
  IN_PROGRESS = 1;
  SUCCESS = 2;
  FAILED = 3;
}

message FileUploadRequest {
  oneof request {
    MetaData metadata = 1;
    File file = 2;
  }
}

message FileUploadResponse {
  string filename = 1;
  Status status = 2;
}
